<resources>
    <string name="app_name">Chatty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Don\'t have an account? Sign Up.</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="signed_up_successfully">Signed up successfully</string>
    <string name="signed_in_successfully">Signed in successfully.</string>
    <string name="fill_the_blanks">Fill the blanks.</string>
    <string name="chatty">Chatty</string>
    <string name="log_out">Log out</string>
    <string name="contacts">\'s Contacts</string>
    <string name="message">Message</string>
    <string name="s_favorite_contacts">\'s Favorite Contacts</string>
    <string name="chatbot">ChatBot</string>
</resources>
