<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.signin.SignInFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:cardCornerRadius="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:backgroundTint="?attr/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_chat_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_signIn"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_36sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_margin="@dimen/_10sdp"
                android:textColor="?attr/colorPrimary"
                app:fontFamily=""
                android:layout_gravity="center"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_margin="@dimen/_10sdp"
                app:startIconDrawable="@drawable/baseline_email_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/e_mail"
                    android:textColor="?attr/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_margin="@dimen/_10sdp"
                app:startIconDrawable="@drawable/baseline_lock_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sign_in"
                android:textSize="@dimen/_14ssp"
                android:layout_marginBottom="@dimen/_20sdp"/>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"/>



</LinearLayout>